Author: Rich Harkins <rich@worldsinfinite.com>
Maintainer: Steffen Hoffmann <hoff.st@web.de>

tracforms-0.5 (yet unreleased):
 resolved issues
 * #6033: tf.who should be passed through format_author
   adding a private, optionally cached version of `env.get_known_users()`
 * #9286: Only first update of Form works, all others fail
 new features
 * add universal title keyword argument for all typs of input field
 * allow to translate another optional argument into MAXLENGTH attribute
   for input fields of tpye TEXT exclusively, hint: others require HTML5
 * add 'parent_blacklist' Option to prevent form submission from parent
   resources known as template
 * fix single-line input broken by literal single quotes in user input
 * allow correct presentation of multi-line content in text area fields
 * prevent UnicodeEncodeError on using nested TracForm operation as form value
 * allow unexpected values in form details page to enable recovery from bad
   TracForm definitions, like duplicated field names, through web_ui alone


tracforms-0.4.1 (22-Jul-2011):
 resolved issues
 * #9000: Plugin uninstallable in Trac 0.11 - sample crashes wiki, more issues
 * let intermediate permissions inherit `FORM_VIEW` for convenience


tracforms-0.4 (18-May-2011):
 resolved issues
 * #5608: trac-admin upgrade with PostgreSQL fails due to specific SQL syntax
 * #5667: Added compatibility with PostgreSQL
   both by full replacement of proprietary db cursor with generic Trac code
 * fix `filter` used for TracForms *if operations, what seems
   broken since initial implementation in 0.2

 new features
 * #5318: Unable to specify the width of input fields
   by recognizing optional attributes similar to textarea fields
 * arbitrary floating point precision support for aggregation functions
   by an algorithm independent of native support in Python >= 2.6
 * support for negative values as arguments of aggregation functions


tracforms-0.3.1 (09-May-2011):
 resolved issues